--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,10 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  text-align: center;
+
 }
 
 img {
@@ -10,6 +15,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 36px;
 }
 
 /* do not edit this footer */
@@ -23,4 +29,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.item {
+  max-width: 200px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
